make: header and footer

--- a/src/components/views/BaseFooter/styles.scss
+++ b/src/components/views/BaseFooter/styles.scss
@@ -1,4 +1,17 @@
 .footer {
     width: 100%;
     background-color: black;
+    line-height: 45px;
+    a{
+        text-decoration: none !important;
+        color:#fff !important;
+    }
+    a:hover{
+        text-decoration: underline !important;
+    }
+    .brands{
+        a{
+            font-size: 30px;
+        }
+    }
 }
