--- a/src/components/layouts/BaseLayout/styles.scss
+++ b/src/components/layouts/BaseLayout/styles.scss
@@ -1,3 +1,18 @@
 .content {
     min-height: 500px;
 }
+
+.brand{
+    align-items: center;
+    .h4{
+        font-size: 24px;
+        font-weight: normal;
+        padding: 0;
+        margin: 0;
+    }
+    .brand-quotes{
+        span{
+            font-size: 16px;
+        }
+    }
+}
